# Athena

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
2pc/: CMakeLists.txt  main.cc
2pc/src/: bitboard.cpp  bitboard.h  bitboards.cpp  bitboards.h  board.h  book.cpp  book.h  chess.cpp  chess.h  commandline.cpp  commandline.h  eval.cpp  eval.h  fen.cpp  fen.h  gamestate.cpp  gamestate.h  mask.cpp  mask.h  move.cpp  move.h  movegen.cpp  movegen.h  nnue.cpp  nnue.h  options.cpp  options.h  perft.cpp  perft.h  pgn.cpp  pgn.h  position.cpp  position.h  random.h  search.cpp  search.h  thread.cpp  thread.h  timeman.cpp  timeman.h  (+9 more)
2pc/src/attacks/: attacks.h  hyperbola_quintessence.cpp  hyperbola_quintessence.h  magic.cpp  magic.h
2pc/tests/: test_movegen.cc  test_perft.cc
4pc/: CMakeLists.txt  main.cc
4pc/src/: chess.h
ELSA-2PC/: CMakeLists.txt  main.cc
ELSA-2PC/src/: bitboard.hpp  chess.hpp  gamestate.cpp  gamestate.h  gamestate.hpp  move.cpp  move.h  random.cpp  types.hpp  uci.hpp  utility.cpp  utility.hpp  zobrist.h
Talia/src/: bitboard.cpp  bitboard.h  chess.h
athena/: CMakeLists.txt  athena.cpp  athena.cxx  athena_gui.cpp
athena/build-portable/: CMakeCache.txt  Makefile  athena  cmake_install.cmake
athena/build-sanitized/: CMakeCache.txt  Makefile  cmake_install.cmake
athena/include/: agent.h  bitboard.h  chess.h  cli.h  engine.h  eval.h  move.h  movegen.h  movepick.h  perft.h  position.h  search.h  thread.h  utility.h  zobrist.h
athena/include/nnue/: nnue.h  nnue_accumulator.h  nnue_config.h  nnue_feature_transformer.h  nnue_network.h
athena/include/nnue/activations/: ReLU.h  nnue_ReLU.h
athena/include/nnue/features/: nnue_feature.h  nnue_feature_transformer.h
athena/include/nnue/layers/: dense.h  nnue_dense.h
athena/include/nnue/utility/: nnue_utility.h
athena/nnue/: nnue_config.h
athena/nnue/features/: nnue_feature.h
athena/nnue/layers/: nnue_dense.h
athena/src/: CMakeLists.txt  athena.cxx  attacks.cpp  attacks.h  bitboard.cpp  bitboard.h  castle.cpp  castle.h  chess.cpp  chess.h  cli.cpp  cli.h  color.h  constants.h  engine.cpp  engine.h  fen.h  move.cpp  move.h  move_parser.cpp  move_parser.h  movegen.cpp  movegen.h  movepick.cpp  movepick.h  offset.cpp  offset.h  perft.cpp  perft.h  piece.cpp  piece.h  piececlass.cpp  piececlass.h  position.cpp  position.h  search.cpp  search.h  square.cpp  square.h  uci.cpp  (+5 more)
athena/tests/: CMakeLists.txt  test_movegen.cc  test_perft.cc
athena/tests/nnue/activations/: test_ReLU.cc
athena/tests/nnue/features/: test_nnue_feature_transformer.cc
athena/tests/nnue/layers/: test_nnue_dense.cc
src/: CMakeLists.txt  athena.cc  athena.cpp  attacks.cpp  attacks.h  bitboard.h  cli.cpp  engine.cpp  engine.h  eval.cpp  eval.h  misc.h.in  move.cpp  offset.h  perft.cpp  perft.h  piece.h  position.h  score.h  search.cpp  search.h
src/chess/: attacks.cpp  attacks.h  bitboard.h  castle.cpp  castle.h  color.cpp  color.h  constants.h  fen.h  move.h  movegen.cpp  movegen.h  perft.h  piece.h  piececlass.h  piececolor.h  position.cpp  position.h  square.h  zobrist.cpp  zobrist.h
src/cli/: cli.cpp  cli.h  perft.cpp  uci.h
src/core/engine/: engine.cpp  engine.h
src/core/engine/option/: option.h  option_button.h  option_check.h  option_combo.h  option_spin.h  option_string.h
src/core/nnue/: new.h
src/core/search/: evaluate.cpp  thread.h
src/nnue/: feature.h  layers.h  nnue.h  nnue_network.h  simd.h
src/uci/: uci.cpp  uci.h
tests/: CMakeLists.txt  perft.cpp  perft.h  perft.sh  perft_bench.cc  perft_test.cc
tests/data/: perft.txt
